# AsciiStreamEngine

./: .gitignore  ARCHITECTURE.md  AsciiRasterizer.cpp  AsciiRasterizer.hpp  CMakeLists.txt  CubeApp.hpp  GraphicsDevice.hpp  Math.hpp  README.md  Renderer.cpp  Renderer.hpp  THIRD_PARTY_LICENSES.md  client.c  client.cpp  renderer_sample.cpp  server.cpp  tmp_log.txt  users.txt
client/: CMakeLists.txt  NetworkStreamClient.cpp  NetworkStreamClient.hpp  TerminalBuffer.hpp  TerminalController.cpp  TerminalController.hpp  client.cpp  emulator_client.cpp
core/: CMakeLists.txt
core/include/: ConnectionContext.hpp  Engine.hpp  GameWorld.hpp  GraphicsDevice.hpp  InputDevice.hpp  Math.hpp  Texture2D.hpp  TextureUtil.hpp
core/include/astream/: AuthContext.hpp  Config.hpp  ConnectionContext.hpp  Debug.hpp  EncryptedStream.hpp  Engine.hpp  GameWorld.hpp  GraphicsDevice.hpp  InputDevice.hpp  MeshUtil.hpp  MeshView.hpp  PhysicsUtil.hpp  Registry.hpp  Texture2D.hpp  TextureUtil.hpp  Transform.hpp  UserStore.hpp  astream.hpp
core/include/astream/auth/: AuthContext.hpp  RegisterPolicy.hpp  UserStore.hpp
core/include/astream/auth_internal/: AuthContext.hpp  UserStore.hpp
core/include/astream/detail/auth/: AuthContext.hpp  UserStore.hpp
core/include/astream/detail/net/: NetworkUtil.hpp
core/include/astream/graphics/: GraphicsDevice.hpp  MeshView.hpp  Texture2D.hpp  Transform.hpp
core/include/astream/graphics/shaders/: DefaultShaders.hpp  ShaderUtil.hpp
core/include/astream/net/: NetworkUtil.hpp
core/include/astream/net_internal/: EncryptedStream.hpp  NetworkUtil.hpp
core/include/astream/shaders/: DefaultShaders.hpp  ShaderUtil.hpp
examples/: CMakeLists.txt  renderer_sample.cpp
examples/chat/: ChatApp.hpp  main.cpp
examples/chat/test/: input_hello.script  input_hello_auth.script  input_hello_login.script  run_test.sh
examples/cube_multiplayer/: CubeApp.hpp  EcsPhysics.hpp  EcsSampleApp.hpp  cube_data.hpp  main.cpp
shaders/: DefaultShaders.hpp  ShaderUtil.hpp
tools/: obj_to_cpp.ts
util/: CMakeLists.txt
util/include/astream/util/: MeshUtil.hpp  StringUtil.hpp  TextInputLine.hpp  TextureUtil.hpp
